update add-on content links fix grafana role creation/deletion for cloud9 simplify for insights README simplify for S3 README update path references in sitewise content remove extra Tags from Scene

--- a/src/modules/s3/cdk/package.json
+++ b/src/modules/s3/cdk/package.json
@@ -21,8 +21,8 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda": "^1.133.0",
-    "@aws-cdk/aws-lambda-python": "^1.133.0",
+    "@aws-cdk/aws-lambda": "1.133.0",
+    "@aws-cdk/aws-lambda-python": "1.133.0",
     "@aws-cdk/core": "1.133.0",
     "path": "^0.12.7",
     "source-map-support": "^0.5.16"
