--- a/src/libs/model_converter_utils/package.json
+++ b/src/libs/model_converter_utils/package.json
@@ -16,11 +16,11 @@
     "obj2gltf": "^3.1.4",
     "request": "^2.88.2",
     "three-obj-mtl-loader": "^1.0.3",
-    "three.js": "^0.77.1",
     "ts-node": "^10.4.0"
   },
   "devDependencies": {
     "@types/aws4": "1.5.2",
-    "axios": "0.21.1"
+    "axios": "^0.26.1",
+    "typescript": "^4.6.3"
   }
 }
