Updated README doc with prereq and installation steps. Removed redundant overrideSave() method from the scene_factory class. Added minor bug fixes and cleaned up client classes.

--- a/src/libs/scene_utils/tsconfig.json
+++ b/src/libs/scene_utils/tsconfig.json
@@ -19,7 +19,8 @@
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
     "typeRoots": ["./node_modules/@types"],
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "exclude": ["build", "node_modules", "dist"]
 }
