--- a/src/libs/scene_utils/package.json
+++ b/src/libs/scene_utils/package.json
@@ -37,6 +37,7 @@
     "JSONStream": "^1.3.5",
     "minimist": "^1.2.6",
     "monocdk": "1.129.0",
+    "os-name": "^4.0.1",
     "p-limit": "^3.1.0",
     "ts-loader": "^8.0.11",
     "ts-polyfill": "^3.8.2",
