--- a/src/libs/scene_utils/package.json
+++ b/src/libs/scene_utils/package.json
@@ -20,6 +20,7 @@
     "@types/fs-extra": "^9.0.3",
     "@types/minimist": "^1.2.2",
     "@types/node": "*",
+    "@types/node-fetch": "^2.6.2",
     "@types/walk": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
@@ -35,11 +36,13 @@
     "http-status": "^1.5.3",
     "minimist": "^1.2.6",
     "monocdk": "1.129.0",
+    "node-fetch": "^2.6.6",
     "os-name": "^4.0.1",
     "p-limit": "^3.1.0",
     "ts-loader": "^8.0.11",
     "ts-polyfill": "^3.8.2",
     "typescript": "^3.6.4",
+    "unzipper": "^0.10.11",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   },
