Clean up, remove orphaned dependencies and imports

--- a/src/workspaces/cookiefactoryv2/CookieFactoryDemo/package.json
+++ b/src/workspaces/cookiefactoryv2/CookieFactoryDemo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@amzn/cookie-factory-demo-v2",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "scripts": {
     "dev": "webpack serve --config webpack.dev.js",
@@ -11,47 +11,39 @@
     "@aws-sdk/client-cognito-identity": "3.252.0",
     "@aws-sdk/client-iottwinmaker": "3.252.0",
     "@aws-sdk/credential-provider-cognito-identity": "3.252.0",
-    "@floating-ui/react": "^0.23.0",
-    "@formatjs/intl": "^2.6.9",
     "@iot-app-kit/react-components": "5.5.1",
     "@iot-app-kit/scene-composer": "5.5.1",
     "@iot-app-kit/source-iottwinmaker": "5.5.1",
     "amazon-cognito-identity-js": "6.1.2",
     "cytoscape": "3.23.0",
-    "cytoscape-cise": "1.0.0",
     "immer": "9.0.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-intl": "^6.3.2"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.4",
-    "@formatjs/ts-transformer": "^3.12.0",
+    "@babel/core": "7.21.4",
+    "@babel/preset-env": "7.21.4",
+    "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.21.4",
     "@types/cytoscape": "3.19.9",
-    "@types/node": "latest",
-    "@types/react-dom": "^18.0.11",
-    "babel-loader": "^9.1.2",
-    "babel-plugin-formatjs": "latest",
-    "babel-plugin-react-intl-auto": "^3.3.0",
-    "css-loader": "^6.7.3",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.7.5",
-    "path": "latest",
-    "sass": "^1.61.0",
-    "sass-loader": "^13.2.2",
-    "style-loader": "^3.3.2",
-    "ts-loader": "^9.4.2",
-    "type-fest": "latest",
-    "typescript": "latest",
-    "typescript-plugin-css-modules": "latest",
-    "webpack": "^5.78.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.2",
-    "webpack-merge": "^5.8.0"
+    "@types/node": "20.0.0",
+    "@types/react-dom": "18.0.11",
+    "babel-loader": "9.1.2",
+    "css-loader": "6.7.3",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "5.5.0",
+    "mini-css-extract-plugin": "2.7.5",
+    "path": "0.12.7",
+    "sass": "1.61.0",
+    "sass-loader": "13.2.2",
+    "style-loader": "3.3.2",
+    "type-fest": "3.10.0",
+    "typescript": "5.0.4",
+    "typescript-plugin-css-modules": "5.0.1",
+    "webpack": "5.78.0",
+    "webpack-cli": "5.0.2",
+    "webpack-dev-server": "4.13.2",
+    "webpack-merge": "5.8.0"
   },
   "overrides": {
     "three": "0.146.0"
