--- a/src/workspaces/cookiefactoryv3/cdk/package.json
+++ b/src/workspaces/cookiefactoryv3/cdk/package.json
@@ -35,6 +35,7 @@
     "@aws-cdk/aws-logs": "1.204.0",
     "@aws-cdk/aws-s3": "1.204.0",
     "@aws-cdk/core": "1.204.0",
+    "cdk-nag": "^2.28.189",
     "source-map-support": "^0.5.16"
   }
 }
