--- a/src/workspaces/cookiefactoryv3/assistant/requirements.txt
+++ b/src/workspaces/cookiefactoryv3/assistant/requirements.txt
@@ -1,6 +1,8 @@
 chainlit/src/dist/chainlit-0.6.3-py3-none-any.whl
 python-dotenv==1.0.0
-langchain==0.0.252
+langchain==0.1.16
+langchain_core==0.1.46
+langchain_community==0.0.33
 google-search-results
 ipywidgets==7.0.0
 opensearch-py==2.2.0
@@ -13,5 +15,5 @@ pypdf==3.15.2
 PyPDF2==3.0.1
 chromadb==0.4.7
 tabulate
-boto3==1.28.74
-botocore==1.31.74
+boto3==1.34.86
+botocore==1.34.86
